// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when end of year > debug 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(360)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
      <line
        class="debug"
        stroke-width="1px"
        transform="rotate(360)"
        x1="0"
        x2="0"
        y1="0"
        y2="-480"
      />
    </g>
  </svg>
</div>
`;

exports[`when end of year > default 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(360)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
      
    </g>
  </svg>
</div>
`;

exports[`when mid year > debug 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(178.03)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
      <line
        class="debug"
        stroke-width="1px"
        transform="rotate(178.03)"
        x1="0"
        x2="0"
        y1="0"
        y2="-480"
      />
    </g>
  </svg>
</div>
`;

exports[`when mid year > default 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(178.03)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
      
    </g>
  </svg>
</div>
`;

exports[`when start of year > debug 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(0)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
      <line
        class="debug"
        stroke-width="1px"
        transform="rotate(0)"
        x1="0"
        x2="0"
        y1="0"
        y2="-480"
      />
    </g>
  </svg>
</div>
`;

exports[`when start of year > default 1`] = `
<div>
  <svg>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(0)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
      
    </g>
  </svg>
</div>
`;
